src/tree/Compilador.java
/* Generated By:JJTree&JavaCC: Do not edit this line. Compilador.java */
package tree;
import java.io.*;
import java.io.FileNotFoundException;
        public class Compilador/*@bgen(jjtree)*/implements CompiladorTreeConstants, CompiladorConstants {/*@bgen(jjtree)*/
  protected JJTCompiladorState jjtree = new JJTCompiladorState();int contador_de_erro_lexico = 0;
            public static void main(String[] args) throws FileNotFoundException{


                Compilador parser = new Compilador( new FileInputStream("C:\u005c\u005cUsers\u005c\u005cUSER\u005c\u005cDesktop\u005c\u005cprogramas_comp\u005c\u005carquivo.txt")); // abre arquivo a ser analisado
                try {  // cria AS
                    parser.start();   // chama o método que faz a análise
                }
                catch (ParseException e) {
                        e.printStackTrace();
                 }
                 finally {
                   System.out.println("deu certo");

                 }
            }

  final public void start() throws ParseException {
                      /*@bgen(jjtree) start */
  SimpleNode jjtn000 = new SimpleNode(JJTSTART);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(MAIN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case LBRACE:
        comand_block();
        break;
      default:
        jj_la1[0] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
                if (jjtc000) {
                  jjtree.clearNodeScope(jjtn000);
                  jjtc000 = false;
                } else {
                  jjtree.popNode();
                }
                if (jjte000 instanceof RuntimeException) {
                  {if (true) throw (RuntimeException)jjte000;}
                }
                if (jjte000 instanceof ParseException) {
                  {if (true) throw (ParseException)jjte000;}
                }
                {if (true) throw (Error)jjte000;}
    } finally {
                if (jjtc000) {
                  jjtree.closeNodeScope(jjtn000, true);
                }
    }
  }

  final public void comand_block() throws ParseException {
                             /*@bgen(jjtree) comand_block */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMAND_BLOCK);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(LBRACE);
      label_1:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case IF:
        case FOR:
        case INT:
        case CHAR:
        case FLOAT:
        case DOUBLE:
        case VOID:
        case WHILE:
        case int_constant:
        case IDENT:
          ;
          break;
        default:
          jj_la1[1] = jj_gen;
          break label_1;
        }
        comand_line();
      }
      jj_consume_token(RBRACE);
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void comand_line() throws ParseException {
                            /*@bgen(jjtree) comand_line */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMAND_LINE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case int_constant:
      case IDENT:
        if (jj_2_2(2)) {
          exp_log();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case int_constant:
          case IDENT:
            if (jj_2_1(2)) {
              exp_num();
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case IDENT:
                assignment_var();
                break;
              default:
                jj_la1[2] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
            break;
          default:
            jj_la1[3] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      case FOR:
        for_declaration();
        break;
      case IF:
        if_declaration();
        break;
      case INT:
      case CHAR:
      case FLOAT:
      case DOUBLE:
      case VOID:
        if (jj_2_3(3)) {
          func();
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case INT:
          case CHAR:
          case FLOAT:
          case DOUBLE:
          case VOID:
            var_declaration();
            break;
          default:
            jj_la1[4] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        break;
      case WHILE:
        while_declaration();
        break;
      default:
        jj_la1[5] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(SEMICOLON);
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void type() throws ParseException {
                      /*@bgen(jjtree) type */
  SimpleNode jjtn000 = new SimpleNode(JJTTYPE);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        break;
      case INT:
        jj_consume_token(INT);
        break;
      case CHAR:
        jj_consume_token(CHAR);
        break;
      case FLOAT:
        jj_consume_token(FLOAT);
        break;
      case DOUBLE:
        jj_consume_token(DOUBLE);
        break;
      default:
        jj_la1[6] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void log_op() throws ParseException {
                        /*@bgen(jjtree) log_op */
  SimpleNode jjtn000 = new SimpleNode(JJTLOG_OP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case OR:
        jj_consume_token(OR);
        break;
      case AND:
        jj_consume_token(AND);
        break;
      case NEQ:
        jj_consume_token(NEQ);
        break;
      case GE:
        jj_consume_token(GE);
        break;
      case LE:
        jj_consume_token(LE);
        break;
      case EQ:
        jj_consume_token(EQ);
        break;
      case LT:
        jj_consume_token(LT);
        break;
      case GT:
        jj_consume_token(GT);
        break;
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void var_declaration() throws ParseException {
                                 /*@bgen(jjtree) var_declaration */
  SimpleNode jjtn000 = new SimpleNode(JJTVAR_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_4(2)) {
        type();
        jj_consume_token(IDENT);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case INT:
        case CHAR:
        case FLOAT:
        case DOUBLE:
        case VOID:
          type();
          assignment_var();
          break;
        default:
          jj_la1[8] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } catch (Throwable jjte000) {
            if (jjtc000) {
              jjtree.clearNodeScope(jjtn000);
              jjtc000 = false;
            } else {
              jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
              {if (true) throw (RuntimeException)jjte000;}
            }
            if (jjte000 instanceof ParseException) {
              {if (true) throw (ParseException)jjte000;}
            }
            {if (true) throw (Error)jjte000;}
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void exp_log() throws ParseException {
                         /*@bgen(jjtree) exp_log */
  SimpleNode jjtn000 = new SimpleNode(JJTEXP_LOG);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        jj_consume_token(IDENT);
        break;
      case int_constant:
        jj_consume_token(int_constant);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      log_op();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        jj_consume_token(IDENT);
        break;
      case int_constant:
        jj_consume_token(int_constant);
        break;
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void num_op() throws ParseException {
                        /*@bgen(jjtree) num_op */
  SimpleNode jjtn000 = new SimpleNode(JJTNUM_OP);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        break;
      case MULT:
        jj_consume_token(MULT);
        break;
      case DIV:
        jj_consume_token(DIV);
        break;
      case REM:
        jj_consume_token(REM);
        break;
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void exp_num() throws ParseException {
                          /*@bgen(jjtree) exp_num */
  SimpleNode jjtn000 = new SimpleNode(JJTEXP_NUM);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        jj_consume_token(IDENT);
        break;
      case int_constant:
        jj_consume_token(int_constant);
        break;
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      num_op();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENT:
        jj_consume_token(IDENT);
        break;
      case int_constant:
        jj_consume_token(int_constant);
        break;
      default:
        jj_la1[13] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void for_declaration() throws ParseException {
                                /*@bgen(jjtree) for_declaration */
  SimpleNode jjtn000 = new SimpleNode(JJTFOR_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(FOR);
      jj_consume_token(LPAREN);
      assignment_var();
      jj_consume_token(SEMICOLON);
      exp_log();
      jj_consume_token(SEMICOLON);
      op_in_the_same_var();
      jj_consume_token(RPAREN);
      comand_block();
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void op_in_the_same_var() throws ParseException {
                                    /*@bgen(jjtree) op_in_the_same_var */
  SimpleNode jjtn000 = new SimpleNode(JJTOP_IN_THE_SAME_VAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENT);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
        jj_consume_token(PLUS);
        jj_consume_token(PLUS);
        break;
      case MINUS:
        jj_consume_token(MINUS);
        jj_consume_token(MINUS);
        break;
      case MULT:
        jj_consume_token(MULT);
        jj_consume_token(MULT);
        break;
      case DIV:
        jj_consume_token(DIV);
        jj_consume_token(DIV);
        break;
      case REM:
        jj_consume_token(REM);
        jj_consume_token(REM);
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void assignment_var() throws ParseException {
                               /*@bgen(jjtree) assignment_var */
  SimpleNode jjtn000 = new SimpleNode(JJTASSIGNMENT_VAR);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IDENT);
      jj_consume_token(AS);
      label_2:
      while (true) {
        if (jj_2_6(2)) {
          jj_consume_token(int_constant);
        } else {
          switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
          case int_constant:
          case IDENT:
            if (jj_2_5(2)) {
              exp_num();
            } else {
              switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
              case int_constant:
              case IDENT:
                exp_log();
                break;
              default:
                jj_la1[15] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
              }
            }
            break;
          default:
            jj_la1[16] = jj_gen;
            jj_consume_token(-1);
            throw new ParseException();
          }
        }
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case int_constant:
        case IDENT:
          ;
          break;
        default:
          jj_la1[17] = jj_gen;
          break label_2;
        }
      }
    } catch (Throwable jjte000) {
             if (jjtc000) {
               jjtree.clearNodeScope(jjtn000);
               jjtc000 = false;
             } else {
               jjtree.popNode();
             }
             if (jjte000 instanceof RuntimeException) {
               {if (true) throw (RuntimeException)jjte000;}
             }
             if (jjte000 instanceof ParseException) {
               {if (true) throw (ParseException)jjte000;}
             }
             {if (true) throw (Error)jjte000;}
    } finally {
             if (jjtc000) {
               jjtree.closeNodeScope(jjtn000, true);
             }
    }
  }

  final public void if_declaration() throws ParseException {
                                /*@bgen(jjtree) if_declaration */
  SimpleNode jjtn000 = new SimpleNode(JJTIF_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(IF);
      jj_consume_token(LPAREN);
      if (jj_2_7(2)) {
        exp_num();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case int_constant:
        case IDENT:
          exp_log();
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPAREN);
      comand_block();
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ELSE:
        else_declaration();
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void else_declaration() throws ParseException {
                                   /*@bgen(jjtree) else_declaration */
  SimpleNode jjtn000 = new SimpleNode(JJTELSE_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(ELSE);
      comand_block();
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void func_name() throws ParseException {
                           /*@bgen(jjtree) func_name */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNC_NAME);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VOID:
        jj_consume_token(VOID);
        break;
      case INT:
        jj_consume_token(INT);
        break;
      case CHAR:
        jj_consume_token(CHAR);
        break;
      case FLOAT:
        jj_consume_token(FLOAT);
        break;
      case DOUBLE:
        jj_consume_token(DOUBLE);
        break;
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(IDENT);
      param_list();
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void param_list() throws ParseException {
                            /*@bgen(jjtree) param_list */
  SimpleNode jjtn000 = new SimpleNode(JJTPARAM_LIST);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      if (jj_2_8(2)) {
        jj_consume_token(LPAREN);
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case VOID:
          jj_consume_token(VOID);
          break;
        case INT:
          jj_consume_token(INT);
          break;
        case CHAR:
          jj_consume_token(CHAR);
          break;
        case FLOAT:
          jj_consume_token(FLOAT);
          break;
        case DOUBLE:
          jj_consume_token(DOUBLE);
          break;
        default:
          jj_la1[21] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        jj_consume_token(IDENT);
        jj_consume_token(RPAREN);
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
          jj_consume_token(LPAREN);
          label_3:
          while (true) {
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case VOID:
              jj_consume_token(VOID);
              break;
            case INT:
              jj_consume_token(INT);
              break;
            case CHAR:
              jj_consume_token(CHAR);
              break;
            case FLOAT:
              jj_consume_token(FLOAT);
              break;
            case DOUBLE:
              jj_consume_token(DOUBLE);
              break;
            default:
              jj_la1[22] = jj_gen;
              jj_consume_token(-1);
              throw new ParseException();
            }
            jj_consume_token(IDENT);
            jj_consume_token(COMMA);
            switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
            case INT:
            case CHAR:
            case FLOAT:
            case DOUBLE:
            case VOID:
              ;
              break;
            default:
              jj_la1[23] = jj_gen;
              break label_3;
            }
          }
          jj_consume_token(RPAREN);
          break;
        default:
          jj_la1[24] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    } finally {
             if (jjtc000) {
               jjtree.closeNodeScope(jjtn000, true);
             }
    }
  }

  final public void func() throws ParseException {
                     /*@bgen(jjtree) func */
  SimpleNode jjtn000 = new SimpleNode(JJTFUNC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      func_name();
      comand_block_func();
    } catch (Throwable jjte000) {
              if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
              } else {
                jjtree.popNode();
              }
              if (jjte000 instanceof RuntimeException) {
                {if (true) throw (RuntimeException)jjte000;}
              }
              if (jjte000 instanceof ParseException) {
                {if (true) throw (ParseException)jjte000;}
              }
              {if (true) throw (Error)jjte000;}
    } finally {
              if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
              }
    }
  }

  final public void comand_block_func() throws ParseException {
                                   /*@bgen(jjtree) comand_block_func */
  SimpleNode jjtn000 = new SimpleNode(JJTCOMAND_BLOCK_FUNC);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      comand_block();
      return_declaration();
    } catch (Throwable jjte000) {
                  if (jjtc000) {
                    jjtree.clearNodeScope(jjtn000);
                    jjtc000 = false;
                  } else {
                    jjtree.popNode();
                  }
                  if (jjte000 instanceof RuntimeException) {
                    {if (true) throw (RuntimeException)jjte000;}
                  }
                  if (jjte000 instanceof ParseException) {
                    {if (true) throw (ParseException)jjte000;}
                  }
                  {if (true) throw (Error)jjte000;}
    } finally {
                  if (jjtc000) {
                    jjtree.closeNodeScope(jjtn000, true);
                  }
    }
  }

  final public void return_declaration() throws ParseException {
                                    /*@bgen(jjtree) return_declaration */
  SimpleNode jjtn000 = new SimpleNode(JJTRETURN_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(RETURN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case int_constant:
        jj_consume_token(int_constant);
        break;
      case IDENT:
        jj_consume_token(IDENT);
        break;
      default:
        jj_la1[25] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    } finally {
            if (jjtc000) {
              jjtree.closeNodeScope(jjtn000, true);
            }
    }
  }

  final public void while_declaration() throws ParseException {
                                   /*@bgen(jjtree) while_declaration */
  SimpleNode jjtn000 = new SimpleNode(JJTWHILE_DECLARATION);
  boolean jjtc000 = true;
  jjtree.openNodeScope(jjtn000);
    try {
      jj_consume_token(WHILE);
      jj_consume_token(LPAREN);
      if (jj_2_9(2)) {
        exp_num();
      } else {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case int_constant:
        case IDENT:
          exp_log();
          break;
        default:
          jj_la1[26] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(RPAREN);
      comand_block();
    } catch (Throwable jjte000) {
          if (jjtc000) {
            jjtree.clearNodeScope(jjtn000);
            jjtc000 = false;
          } else {
            jjtree.popNode();
          }
          if (jjte000 instanceof RuntimeException) {
            {if (true) throw (RuntimeException)jjte000;}
          }
          if (jjte000 instanceof ParseException) {
            {if (true) throw (ParseException)jjte000;}
          }
